feat(shop): implement owner recovery with permission checks and enhance showcase item handling